add more plugins + dracula theme

--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,9 @@
 [submodule "bundle/vim-indent-guides"]
 	path = bundle/vim-indent-guides
 	url = https://github.com/nathanaelkane/vim-indent-guides.git
+[submodule "/Users/awinecki/.vim/bundle/vundle"]
+	path = /Users/awinecki/.vim/bundle/vundle
+	url = https://github.com/gmarik/vundle.git
+[submodule "bundle/command-t"]
+	path = bundle/command-t
+	url = git://git.wincent.com/command-t.git
